styles/style_main.css
.noto-serif kr-regular {
	font-family: "Noto Serif KR", serif;
	font-weight: 400;
	font-style: normal;
}

.italianno-regular {
	font-family: "Italianno", cursive;
	font-weight: 400;
	font-style: normal;
}

.ingrid-darling-regular {
	font-family: "Ingrid Darling", cursive;
	font-weight: 400;
	font-style: normal;
}

.header-date {
	width: 100%;
	height: 25px;
	position: relative;
	text-align: center;
	color: black;
	font-size: 25px;
	font-family: Italianno;
	font-weight: 400;
	word-wrap: break-word;
	margin: 20px auto;
}

.header-line {
	width: 90%;
	position: relative;
	margin: 20px auto;
	border: 1px black solid;
}

.header{
	margin: 1em 0 0 0;
}

.footer{
	margin: 0 0 1em 0;
}

.full-page{
	width: 100%;

	justify-content: center;
	align-items: flex-start;

	flex-direction: column;
	display: inline-flex;
}

/* Global item constraints */

.page {
	width: 100%;
	height: 100%;
	min-height: 500px;
	background: #FBFBFB;
	overflow: hidden;
	max-width: 1024px;
	margin: auto;

	h1 {
		position: relative;
		text-align: center;
		color: black;
		font-size: 20px;
		font-family: Noto Serif KR;
		font-weight: 400;
		line-height: 30px;
		word-wrap: break-word;
		margin: 1em 0 1em 0;
	}
}

.content-page {
	width: 100%;
	height: 100%;
	min-height: 500px;
	background: #FBFBFB;
	overflow: hidden;
	max-width: 1024px;
	margin: auto;

	align-items: center;
	display: flex;
	justify-content: center;
	flex-direction: column;


	h1 {
		position: relative;
		text-align: center;
		color: black;
		font-size: 20px;
		font-family: Noto Serif KR;
		font-weight: 400;
		line-height: 30px;
		word-wrap: break-word;
		margin: 1em 0 1em 0;
	}
}

.content-page > p {
	position: relative;
	text-align: center;
	color: black;
	font-size: 15px;
	font-family: Noto Serif KR;
	font-weight: 400;
	line-height: 30px;
	word-wrap: break-word;
}

.rect {
	width: 80%;
	min-height: 450px;
	margin: auto;
	padding: 15px;
	position: relative;
	background: white;
	border-radius: 17px;

	align-items: center;
	display: flex;
	justify-content: center;
	flex-direction: column;
}

.icon-button {
	width: 57px;
	height: 57px;
	padding: 0px 5px 0px 5px;
	justify-content: center;
	align-items: center;
	display: inline-flex;

	.icon-image {
		width: 40px;
		height: 40px;
		box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
		border-radius: 17px;

		justify-content: center;
		align-items: center;

		overflow: hidden;
	}
}

.icon-button:hover .icon-image{
	opacity: 0.5;
}

small {
	font-size: 12px;
	font-family: Noto Serif KR;
	font-weight: 400;
	word-wrap: break-word;
}
span {

	color: black;
	font-size: 15px;
	font-family: Noto Serif KR;
	font-weight: 400;
	word-wrap: break-word;
}

.content-page > .howToCome{
	p {
		span {
			line-height: 1.5em;
		}
		align-self: stretch;
		flex-direction: column;
		justify-content: flex-start;
		align-items: flex-start;
		display: flex;
		margin: 0.75em 1em 0.75em 1em;
	}
	width: 100%;
	padding-left: 10px;
	padding-right: 10px;
	position: relative;
	flex-direction: column;
	justify-content: center;
	align-items: flex-start;
	gap:0.5vh;
	display: inline-flex;
}


.content-page > .introducePerson {
	position: relative;
	flex-direction: column;
	justify-content: center;
	align-items: flex-end;
	gap: 16px;
	display: inline-flex;
}

.calendar {
	.Grid {
		align-self: stretch;
		flex: 1 1 0;
		flex-direction: column;
		justify-content: space-between;
		align-items: center;
		display: flex;
	}
	.Line {
		align-self: stretch;
		justify-content: space-between;
		align-items: center;
		display: inline-flex;
	}
	width: 80%;
	height: 250px;
	display: inline-flex;
}

.WeekDay {
	.Text {
		text-align: center;
		color: #0F0F3F;
		font-size: 15px;
		font-family: Noto Serif KR;
		font-weight: 400;
		word-wrap: break-word;
	}
	.HighlightNumber {
		position: relative;
		background: #0F0F3F;
		border-radius: 50%;
		text-align: center;
		white-space: nowrap;
		padding: 0.5vh 1vh;

		color: white;
		font-size: 15px;
		font-family: Noto Serif KR;
		font-weight: 400;
		word-wrap: break-word;
	}
	.HiddenNumber {
		text-align: center;
		color: rgba(96.90, 96.90, 96.90, 0.25);
		font-size: 15px;
		font-family: Noto Serif KR;
		font-weight: 400;
		word-wrap: break-word;
	}
	.RedNumber {
		text-align: center;
		color: #AB5959;
		font-size: 15px;
		font-family: Noto Serif KR;
		font-weight: 400;
		word-wrap: break-word;
	}
	.Number {
		text-align: center;
		color: #616161;
		font-size: 15px;
		font-family: Noto Serif KR;
		font-weight: 400;
		word-wrap: break-word;
	}

	width: 10%;
	border-radius: 4px;
	justify-content: center;
	align-items: center;
	display: flex;
}

.Account {
	text-align: center;
	align-items: center;
	justify-content: space-between;
	display: inline-flex;
	gap: 10px;
	margin: 15px;
	width:100%;
}
.Account > .Line {
	min-width: 120px;
	flex-direction: row;
	justify-content: flex-end;
	display: inline-flex;
	gap: 20px;

	.Text {
		white-space: nowrap;
		text-align: center;
		color: black;
		font-size: 15px;
		font-family: Noto Serif KR;
		font-weight: 400;
		line-height: 30px;
		word-wrap: break-word;
	}
}

button.Button {
	.Text {
		color: #0F0F02;
		font-size: 13px;
		font-family: Noto Serif KR;
		font-weight: 400;
		line-height: 26px;

		white-space: nowrap;
		margin-left: 15px;
		margin-right: 15px;
	}
	width: fit-content;
	position: relative;
	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

	background: #ECEEF2;
	border-radius: 17px;
	border-width: 0px;
	overflow: auto;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 10px;
	display: flex;
}
.Button:hover {
	background: #A1A1A1;

	.Text {
		color: #FDFDFD;
	}
}
.Button:active {
	background: #101D41;
	.Text {
		color: #FCFCFC;
	}
}

